@@ -355,6 +355,7 @@ $magicWords = array(
 	'special'                 => array( 0,    'special' ),
 	'speciale'                => array( 0,    'speciale' ),
 	'defaultsort'             => array( 1,    'DEFAULTSORT:', 'DEFAULTSORTKEY:', 'DEFAULTCATEGORYSORT:' ),
+	'defaultcollation'        => array( 1,    'DEFAULTCOLLATION:'      ),
 	'filepath'                => array( 0,    'FILEPATH:' ),
 	'tag'                     => array( 0,    'tag' ),
 	'hiddencat'               => array( 1,    '__HIDDENCAT__' ),
@@ -372,6 +373,8 @@ $magicWords = array(
 	'url_query'               => array( 0,    'QUERY' ),
 	'defaultsort_noerror'     => array( 0,    'noerror' ),
 	'defaultsort_noreplace'   => array( 0,    'noreplace' ),
+	'defaultcollation_noerror' => array( 0,   'noerror' ),
+	'defaultcollation_noreplace' => array( 0, 'noreplace' ),
 	'pagesincategory_all'     => array( 0,    'all' ),
 	'pagesincategory_pages'   => array( 0,    'pages' ),
 	'pagesincategory_subcats' => array( 0,    'subcats' ),
